--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12345,6 +12345,10 @@ textarea.form-control-lg {
   font-size: 16px;
 }
 
+.post .card-text {
+  font-size: 1rem;
+}
+
 /* stylelint-disable selector-list-comma-newline-after */
 .blog-header {
   border-bottom: 1px solid #e5e5e5;
